--- a/src/dev.css
+++ b/src/dev.css
@@ -17,6 +17,16 @@ body {
     margin: 1rem 0;
 }
 
+.btn-row {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+}
+
+.btn-row button {
+    flex-grow: 1;
+}
+
 .wide-btn {
     margin-bottom: 0.5rem;
 }
